2023-02-04-rs/tests/snapshots/golden_master__golden_master_10_days.snap
---
source: tests/golden-master.rs
expression: result
---
- name: +5 Dexterity Vest
  sell_in: 0
  quality: 10
- name: Aged Brie
  sell_in: -8
  quality: 18
- name: Elixir of the Mongoose
  sell_in: -5
  quality: 0
- name: "Sulfuras, Hand of Ragnaros"
  sell_in: 0
  quality: 80
- name: "Sulfuras, Hand of Ragnaros"
  sell_in: -1
  quality: 80
- name: Backstage passes to a TAFKAL80ETC concert
  sell_in: 5
  quality: 35
- name: Backstage passes to a TAFKAL80ETC concert
  sell_in: 0
  quality: 50
- name: Backstage passes to a TAFKAL80ETC concert
  sell_in: -5
  quality: 0
- name: Conjured Mana Cake
  sell_in: -7
  quality: 0

