2023-02-04-rs/tests/snapshots/golden_master__golden_master_5_days.snap
---
source: tests/golden-master.rs
expression: result
---
- name: +5 Dexterity Vest
  sell_in: 5
  quality: 15
- name: Aged Brie
  sell_in: -3
  quality: 8
- name: Elixir of the Mongoose
  sell_in: 0
  quality: 2
- name: "Sulfuras, Hand of Ragnaros"
  sell_in: 0
  quality: 80
- name: "Sulfuras, Hand of Ragnaros"
  sell_in: -1
  quality: 80
- name: Backstage passes to a TAFKAL80ETC concert
  sell_in: 10
  quality: 25
- name: Backstage passes to a TAFKAL80ETC concert
  sell_in: 5
  quality: 50
- name: Backstage passes to a TAFKAL80ETC concert
  sell_in: 0
  quality: 50
- name: Conjured Mana Cake
  sell_in: -2
  quality: 0

